--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
     <head>
-        <meta chartset="UTF-8">
+        <meta charset="UTF-8">
         <title>My First Project</title>
     </head>
 
